--- a/index.html
+++ b/index.html
@@ -427,6 +427,29 @@
             <use href="./images/icons.svg#icon-image-19"></use>
           </svg>
         </button>
+        <div>
+        <h4 class="form-heading">
+          Leave your contacts and we will call you back
+        </h4>
+        <div>
+          <form class="form">
+            <label class="form-label">
+              Name
+              <input type="text" name="name" class="form-input" />
+            </label>
+            <label class="form-label">
+              Phone
+              <input type="tel" name="phone" class="form-input" />
+            </label>
+            <label class="form-label">
+              Email
+              <input type="email" name="email" class="form-input" />
+            </label>
+            <label class="form-label">Comment
+            <textarea class="form-input" name="description" placeholder="Text input" rows="10"></textarea></label>
+            <label class="form-label"> I accept the terms and conditions of the Privacy Policy <input type="checkbox" value="policy_agreement" name="agreement"/></label>
+          </form>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
