--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
           Leave your contacts and we will call you back
           </p>
        
-          <form class="form">
+          < class="form">
           <div class="form-box">
             <label class="form-label" for="user-name">
               Name </label>
@@ -441,7 +441,7 @@
               <svg width="18" height="24" class="icon-form">
             <use href="./images/icons.svg#icon-image-20"></use>
           </svg>
-               </div>
+               </div></div>
                <div class="form-box">
             <label class="form-label" for="phone">
               Phone </label>
@@ -450,7 +450,7 @@
               <svg width="18" height="24" class="icon-form">
             <use href="./images/icons.svg#icon-image-21"></use>
           </svg>
-               </div>
+               </div></div>
                <div class="form-box">
             <label class="form-label" for="email">
               Email </label>
@@ -459,7 +459,7 @@
               <svg width="18" height="24" class="icon-form">
             <use href="./images/icons.svg#icon-image-22"></use>
           </svg>
-               </div>
+               </div></div>
                <div class="form-comment">
                  <label class="form-label" for="user-comment"></label>
                  <textarea name="user-comment" id="user-comment" placeholder="Text input" class="form-textarea"></textarea>
