--- a/index.html
+++ b/index.html
@@ -427,45 +427,54 @@
             <use href="./images/icons.svg#icon-image-19"></use>
           </svg>
         </button>
-  
+
         <p class="form-heading">
           Leave your contacts and we will call you back
-          </p>
-       
-          < class="form">
+        </p>
+
+        <form class="form">
           <div class="form-box">
-            <label class="form-label" for="user-name">
-              Name </label>
-              <div class="input-box">
-              <input type="text" name="user-name" class="form-input" id="user-name"/>
+            <label class="form-label" for="user-name"> Name </label>
+            <div class="input-box">
+              <input
+                type="text"
+                name="user-name"
+                class="form-input"
+                id="user-name"
+              />
               <svg width="18" height="24" class="icon-form">
-            <use href="./images/icons.svg#icon-image-20"></use>
-          </svg>
-               </div></div>
-               <div class="form-box">
-            <label class="form-label" for="phone">
-              Phone </label>
-              <div class="input-box">
-              <input type="tel" name="phone" class="form-input" id="phone"/>
+                <use href="./images/icons.svg#icon-image-20"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-box">
+            <label class="form-label" for="phone"> Phone </label>
+            <div class="input-box">
+              <input type="tel" name="phone" class="form-input" id="phone" />
               <svg width="18" height="24" class="icon-form">
-            <use href="./images/icons.svg#icon-image-21"></use>
-          </svg>
-               </div></div>
-               <div class="form-box">
-            <label class="form-label" for="email">
-              Email </label>
-              <div class="input-box">
-              <input type="email" name="email" class="form-input" id="email"/>
+                <use href="./images/icons.svg#icon-image-21"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-box">
+            <label class="form-label" for="email"> Email </label>
+            <div class="input-box">
+              <input type="email" name="email" class="form-input" id="email" />
               <svg width="18" height="24" class="icon-form">
-            <use href="./images/icons.svg#icon-image-22"></use>
-          </svg>
-               </div></div>
-               <div class="form-comment">
-                 <label class="form-label" for="user-comment"></label>
-                 <textarea name="user-comment" id="user-comment" placeholder="Text input" class="form-textarea"></textarea>
-               </div>
-           </form>
-        
+                <use href="./images/icons.svg#icon-image-22"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-comment">
+            <label class="form-label" for="user-comment"></label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              class="form-textarea"
+            ></textarea>
+          </div>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
