--- a/index.html
+++ b/index.html
@@ -486,11 +486,12 @@
               >I accept the terms and conditions of the
               <span class="label-span"
                 ><svg width="10" height="8" class="icon-tick">
-                  <use
-                    href="./images/icons.svg#icon-image-24"
-                  ></use></svg></span
-            ></label>
+                  <use href="./images/icons.svg#icon-image-24"></use></svg
+              ></span>
+              <a href="" class="policy-link"> Privacy Policy</a></label
+            >
           </div>
+          <button type="submit" class="button-modal">Send</button>
         </form>
       </div>
     </div>
