--- a/index.html
+++ b/index.html
@@ -418,6 +418,24 @@
             </li>
           </ul>
         </div>
+        <div class="subsribe-container">
+          <p class="subscribe-paragraph">Subscribe</p>
+          <form class="footer-form">
+            <label for="" class="label-footer"></label>
+            <input
+              type="email"
+              placeholder="E-mail"
+              name="subscription"
+              class="input-footer"
+            />
+            <button type="submit" class="bttn-footer">
+              Subscribe
+              <svg width="24" height="24" class="icon-bttn">
+                <use href="./images/icons.svg#icon-image-23"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div data-modal class="backdrop is-hidden">
