--- a/index.html
+++ b/index.html
@@ -421,13 +421,13 @@
         <div class="subsribe-container">
           <p class="subscribe-paragraph">Subscribe</p>
           <form class="footer-form">
-            <label for="" class="label-footer"></label>
-            <input
-              type="email"
-              placeholder="E-mail"
-              name="subscription"
-              class="input-footer"
-            />
+            <label class="label-footer">
+              <input
+                type="email"
+                placeholder="E-mail"
+                name="subscription"
+                class="input-footer"
+            /></label>
             <button type="submit" class="bttn-footer">
               Subscribe
               <svg width="24" height="24" class="icon-bttn">
