--- a/portfolio.html
+++ b/portfolio.html
@@ -313,6 +313,24 @@
             </li>
           </ul>
         </div>
+        <div class="subsribe-container">
+          <p class="subscribe-paragraph">Subscribe</p>
+          <form class="footer-form">
+            <label class="label-footer">
+              <input
+                type="email"
+                placeholder="E-mail"
+                name="subscription"
+                class="input-footer"
+            /></label>
+            <button type="submit" class="bttn-footer">
+              Subscribe
+              <svg width="24" height="24" class="icon-bttn">
+                <use href="./images/icons.svg#icon-image-23"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
